--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,10 +14,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: update packages
-      run: |
-        sudo apt update
-        sudo apt-get upgrade
+#     - name: update packages
+#       run: |
+#         sudo apt update
+#         sudo apt-get upgrade
     
     # set up gcc
     - name: install gcc
